force-app/main/UtilityComponents/messaging/objects/Conversation__c/Conversation__c.object-meta.xml
<CustomObject>
    <label>Conversation</label>
    <nameField>
        <displayFormat>CONV-{0000}</displayFormat>
        <label>Conversation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>