force-app/main/UtilityComponents/messaging/objects/Conversation__c/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <description>Name of the group conversation</description>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>