force-app/main/UtilityComponents/messaging/objects/Conversation__c/fields/IsGroup__c.field-meta.xml
<CustomField>
    <fullName>IsGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is a group conversation with multiple participants</description>
    <label>Is Group</label>
    <type>Checkbox</type>
</CustomField> 