force-app/main/UtilityComponents/messaging/objects/Conversation__c/fields/LastMessage__c.field-meta.xml
<CustomField>
    <fullName>LastMessage__c</fullName>
    <label>Last Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>