force-app/main/UtilityComponents/messaging/objects/Conversation__c/fields/LastMessageDate__c.field-meta.xml
<CustomField>
    <fullName>LastMessageDate__c</fullName>
    <label>Last Message Date</label>
    <type>DateTime</type>
</CustomField>