force-app/main/UtilityComponents/messaging/objects/Conversation__c/fields/Members__c.field-meta.xml
<CustomField>
    <fullName>Members__c</fullName>
    <description>Semicolon-separated list of User/Contact IDs who are members of this conversation</description>
    <inlineHelpText>Semicolon-separated list of User/Contact IDs</inlineHelpText>
    <label>Members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>