force-app/main/UtilityComponents/messaging/objects/Conversation__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <label>Participants</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>