force-app/main/UtilityComponents/messaging/objects/Conversation__c/fields/RecipientId__c.field-meta.xml
<CustomField>
    <fullName>RecipientId__c</fullName>
    <label>Recipient ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>