force-app/main/UtilityComponents/messaging/objects/Conversation__c/fields/RecipientName__c.field-meta.xml
<CustomField>
    <fullName>RecipientName__c</fullName>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>