force-app/main/UtilityComponents/messaging/objects/Conversation__c/fields/RecipientProfileImage__c.field-meta.xml
<CustomField>
    <fullName>RecipientProfileImage__c</fullName>
    <label>Recipient Profile Image</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>